--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> FITNESS CLUB</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -126,8 +126,7 @@
         <div class="right-side-2">
           <h2>Create Your Own Fitness Journey</h2>
           <p>
-            lamet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. velit officia consequat duis enim velit mollit.
+            You can also create your own fitness journey using the tools provided in the application.
           </p>
           <div class="button-group">
             <button class="common-button">get started</button>
