--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left-side">
              <div> 
                 <a href="#">
-                    <img src="../logo.jpg" alt="logo">
+                    <img src="logo.jpg" alt="logo">
                 </a>
             </div>
             <div class="submenu">
@@ -55,22 +55,22 @@
                 </p>
                 <div class="button-group">
                     <a href="#">
-                        <img src="../appstore.jpg" alt="appstore">
+                        <img src="appstore.jpg" alt="appstore">
                     </a>
                     <a href="#">
-                        <img src="../playstore.jpg" alt="playstore">
+                        <img src="playstore.jpg" alt="playstore">
                     </a>
                 </div>
             </div>
 
             <div class="ms-right">
-                <img src="../main section.jpg" alt="main-sectionimage">
+                <img src="main section.jpg" alt="main-sectionimage">
             </div>
     </section>
     <section class="common-section" id="section2">
         <div class="left-side-2">
              <figure>
-                 <img src="../section2pic.png" alt="section2">
+                 <img src="section2pic.png" alt="section2">
              </figure>
         </div>
 
@@ -95,7 +95,7 @@
         </p>
         <div class="section-3-task">
             <div class="task1">
-                <img src="../sectionIcon1.png" alt="icon1">
+                <img src="sectionIcon1.png" alt="icon1">
                 <h3>Learn & improve</h3>
                 <p>
                     Gain or acquire knowledge of skill in something by study, 
@@ -103,7 +103,7 @@
                 </p>
             </div>
             <div class="task2">
-                <img src="../sectionIcon2.png" alt="icon2">
+                <img src="sectionIcon2.png" alt="icon2">
                 <h3>Time Management</h3>
                 <p>Time management is the process of planning and controlling 
                     how much time to spend on specific activities. Good time
@@ -112,7 +112,7 @@
                      success.</p>
             </div>
             <div class="task3">
-                <img src="../sectionIcon3.png" alt="icon3">
+                <img src="sectionIcon3.png" alt="icon3">
                 <h3>Stay Motivated</h3>
                 <p>This is a problem since the best way to stay motivated and 
                     actually achieve our goals is to mostly ignore the end goal 
@@ -136,7 +136,7 @@
   
         <!-- left side of section 2  -->
         <div class="left-side-2">
-          <img src="../section4img.png" alt="section2" />
+          <img src="section4img.png" alt="section2" />
         </div>
       </section>
 
@@ -144,7 +144,7 @@
       <section class="common-section" id="section-5">
         <!-- left side of section 2  -->
         <div class="left-side">
-          <img src="../section5.png" alt="section5" />
+          <img src="section5.png" alt="section5" />
         </div>
   
         <!-- right side of section 2  -->
@@ -208,7 +208,7 @@
      <footer>
          
       <div class="logo-div">
-        <img src="../logo.jpg" alt="logo" />
+        <img src="logo.jpg" alt="logo" />
         <p>@2022 FitnessClub</p>
       </div>
 
